@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Some skins used the old "head_slot" instead of standard H1 titles.
+- Added the missing file calendar_edit.py.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
